// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/Tag Pill 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <Tag
      pillStyle={true}
    >
      <div
        className="tag is-pill"
      >
        Success
      </div>
    </Tag>
  </div>
</div>
`;

exports[`Storyshots Prototypes/Tag Pill And Success 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <Tag
      pillStyle={true}
      success={true}
    >
      <div
        className="tag is-success is-pill"
      >
        Pill Success
      </div>
    </Tag>
  </div>
</div>
`;

exports[`Storyshots Prototypes/Tag Small 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <Tag
      small={true}
    >
      <div
        className="tag is-small"
      >
        Warning
      </div>
    </Tag>
  </div>
</div>
`;

exports[`Storyshots Prototypes/Tag Standard 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <Tag>
      <div
        className="tag"
      >
        Tag
      </div>
    </Tag>
  </div>
</div>
`;

exports[`Storyshots Prototypes/Tag Success 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <Tag
      success={true}
    >
      <div
        className="tag is-success"
      >
        Success
      </div>
    </Tag>
  </div>
</div>
`;

exports[`Storyshots Prototypes/Tag Warning 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <Tag
      warning={true}
    >
      <div
        className="tag is-warning"
      >
        Warning
      </div>
    </Tag>
  </div>
</div>
`;
